@@ -1,4 +1,5 @@
 0.9.1
+   - bug [9500] "Foreslået patch til ptithreads afvisning af format+submitter med manglende jobliste"
    - bug [9497] "xmlutilstest bruger deprecatede metoder"
    - bug [9468] "Har vi behov for equals metoden i Job?"
    - bug [9465] "Ny HarvesterIOException skal håndteres korrekt i testen af DatadockManagerTest.java"
